[gd_scene load_steps=37 format=2]

[ext_resource path="res://Inimigos/Monsters_Creatures_Fantasy/Monsters_Creatures_Fantasy/Mushroom/Run.png" type="Texture" id=1]
[ext_resource path="res://Inimigos/Monsters_Creatures_Fantasy/Monsters_Creatures_Fantasy/Mushroom/Idle.png" type="Texture" id=2]
[ext_resource path="res://Inimigos/Monsters_Creatures_Fantasy/Monsters_Creatures_Fantasy/Mushroom/Attack.png" type="Texture" id=3]
[ext_resource path="res://Inimigos/Monsters_Creatures_Fantasy/Monsters_Creatures_Fantasy/Mushroom/Take Hit.png" type="Texture" id=4]
[ext_resource path="res://script_inimigocog2.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "Melee",
"speed": 20.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": false,
"name": "Take a hit",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=27]
height = 15.3149

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 29.355, 19.484 )

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.32549, 1, 0.352941, 1 )

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 0.89, 0.2225, 0.2225, 0.866667 )

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 19.613, 12.1775 )

[sub_resource type="RectangleShape2D" id=34]
extents = Vector2( 19.613, 12.3065 )

[node name="InimigoCog2" type="Node2D"]
__meta__ = {
"_edit_horizontal_guides_": [ 50.0 ]
}

[node name="inimigo2" type="KinematicBody2D" parent="."]
scale = Vector2( 1.64237, 1.64237 )
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="inimigo2"]
frames = SubResource( 14 )
animation = "Idle"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="inimigo2"]
position = Vector2( 0.608877, 7.9154 )
shape = SubResource( 27 )

[node name="RayCast2D2Esquerdo" type="RayCast2D" parent="inimigo2"]
position = Vector2( -14.613, 19.484 )
scale = Vector2( 0.375329, 0.354137 )
enabled = true
cast_to = Vector2( 0, 27.5092 )

[node name="RayCast2D2Direito" type="RayCast2D" parent="inimigo2"]
position = Vector2( 14.613, 19.484 )
scale = Vector2( 0.375329, 0.354137 )
enabled = true
cast_to = Vector2( -3.8147e-06, 27.5092 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="inimigo2"]
root_node = NodePath("../..")

[node name="Timer" type="Timer" parent="inimigo2"]
wait_time = 15.0
autostart = true

[node name="ZonaDeDeteccaoEsquerda" type="Area2D" parent="inimigo2"]
position = Vector2( -53.5811, 9.74202 )

[node name="Zona" type="CollisionShape2D" parent="inimigo2/ZonaDeDeteccaoEsquerda"]
position = Vector2( -1.90735e-05, 0 )
shape = SubResource( 28 )

[node name="ZonaDeDeteccaoDireita" type="Area2D" parent="inimigo2"]
position = Vector2( 53.5811, 9.74202 )

[node name="Zona" type="CollisionShape2D" parent="inimigo2/ZonaDeDeteccaoDireita"]
position = Vector2( 1.90735e-05, 0 )
shape = SubResource( 28 )

[node name="CogMonster" type="Label" parent="inimigo2"]
modulate = Color( 1, 0.913725, 0, 1 )
margin_left = -9.74202
margin_top = -24.355
margin_right = 81.258
margin_bottom = -10.355
rect_scale = Vector2( 0.273714, 0.273714 )
text = "CogMonster"
align = 1
uppercase = true

[node name="ProgressBar" type="ProgressBar" parent="inimigo2"]
margin_left = -14.613
margin_top = -19.484
margin_right = -10.613
margin_bottom = 0.515959
rect_scale = Vector2( 7.77318, 0.279365 )
custom_styles/fg = SubResource( 31 )
custom_styles/bg = SubResource( 32 )
max_value = 10.0
value = 10.0
percent_visible = false

[node name="RangeAttackEsq" type="Area2D" parent="inimigo2"]
position = Vector2( -24.355, 14.613 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="inimigo2/RangeAttackEsq"]
modulate = Color( 1, 0, 0.140625, 1 )
position = Vector2( 7.62939e-06, -2.38419e-07 )
scale = Vector2( 0.25, 1 )
shape = SubResource( 33 )

[node name="RangeAttackDir" type="Area2D" parent="inimigo2"]
position = Vector2( 24.355, 14.613 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="inimigo2/RangeAttackDir"]
modulate = Color( 1, 0, 0.140625, 1 )
position = Vector2( -1.23978e-05, 0 )
scale = Vector2( 0.25, 1 )
shape = SubResource( 34 )

[connection signal="animation_finished" from="inimigo2/AnimatedSprite" to="inimigo2" method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="inimigo2/ZonaDeDeteccaoEsquerda" to="inimigo2" method="ZonaDeDeteccaoEsquerda"]
[connection signal="body_exited" from="inimigo2/ZonaDeDeteccaoEsquerda" to="inimigo2" method="ZonaDeDeteccaoEsqOut"]
[connection signal="body_entered" from="inimigo2/ZonaDeDeteccaoDireita" to="inimigo2" method="ZonaDeDeteccaoDireita"]
[connection signal="body_exited" from="inimigo2/ZonaDeDeteccaoDireita" to="inimigo2" method="ZonaDeDeteccaoDirOut"]
[connection signal="body_entered" from="inimigo2/RangeAttackEsq" to="inimigo2" method="rangeAttackEsq"]
[connection signal="body_exited" from="inimigo2/RangeAttackEsq" to="inimigo2" method="rangeAttackEsqOut"]
[connection signal="body_entered" from="inimigo2/RangeAttackDir" to="inimigo2" method="rangeAttackDir"]
[connection signal="body_exited" from="inimigo2/RangeAttackDir" to="inimigo2" method="rangeAttackDirOut"]
